src/tests/Loader/classloader/generics/Instantiation/Negative/abstract01.ilproj
<Project Sdk="Microsoft.NET.Sdk.IL">
  <PropertyGroup>
    <OutputType>Exe</OutputType>
  </PropertyGroup>
  <ItemGroup>
    <Compile Include="abstract01.il" />
  </ItemGroup>
</Project>
